[package]
name = "rusty-notion"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = { version = "0.6.12" }
serde_json = { version = "1.0.133" }
thiserror = { version = "2.0.3" }
tracing = { version = "0.1.40" }
ureq = { version = "2.10.1", features = ["json"] }

[dev-dependencies]
anyhow = { version = "1.0.93" }
clap = { version = "4.5.21", features = ["derive"] }
httpmock = { version = "0.7.0" }
